# dotane_ic

./: .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  prep.sh
src/dotane/: AI_CHAT_SIDEBAR_README.md  INDEXEDDB_README.md  README.md  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  workspace.html
src/dotane-types/: Cargo.toml
src/dotane-types/src/: lib.rs  note_context.rs
src/dotane/public/.well-known/: ic-domains
src/dotane/src/: App.tsx  NoteApp.tsx  index.css  store.ts
src/dotane/src/components/: README-suggestion-menu.md  ai-chat-sidebar.tsx  ai-page.tsx  ai-side-chat.tsx  alert.tsx  app-sidebar.tsx  crypto-payment-modal.tsx  database-test.tsx  deploy-page.tsx  domain-link-modal.tsx  dotane-logo.tsx  home-page.tsx  note-editor.tsx  premium-page.tsx  publish-modal.tsx  publish-update-modal.tsx  settings-modal.tsx  settings-page.tsx  signin-page.tsx  suggestion-menu-example.tsx  theme-provider.tsx  theme-toggle.tsx  wallet-direct-logo.tsx  wallet-direct-modal.tsx
src/dotane/src/components/ui/: dialog.tsx  dropdown-menu.tsx  select.tsx
src/dotane/src/hooks/: use-indexeddb.ts  use-notes.ts
src/dotane/src/lib/: ai-sse.ts  config.ts  indexeddb.ts
src/dotane/src/types/: note.ts  notebook.ts
src/dotane_asset_storage/: Cargo.toml  dotane_asset_storage.did
src/dotane_asset_storage/src/: lib.rs
src/dotane_ic_backend/: Cargo.toml  build.rs  dotane_ic_backend.did
src/dotane_ic_backend/src/: lib.rs  types.rs
src/dotane_user_storage/: Cargo.toml  dotane_user_storage.did
src/dotane_user_storage/src/: lib.rs  note_context.rs  types.rs
src/ic-asset-server/: Cargo.toml
src/ic-asset-server/src/: lib.rs  types.rs
src/ic-certified-stable-assets-server/: Cargo.toml
src/ic-certified-stable-assets-server/src/: lib.rs  state_machine.rs  tests.rs
src/ic-certified-stable-assets-server/src/asset_certification/types/: certification.rs  http.rs  rc_bytes.rs
