[package]
name = "dotane_ic_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.14"
ic-cdk = "0.18.5"
ic-cdk-timers = "0.12.2" # Feel free to remove this dependency if you don't need timers
ic-stable-structures = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.17"
dotane-types = { path = "../dotane-types" }
# canister_http_router = {git = "https://github.com/Zedonboy/canister_http_router.git", branch = "main"}
handlebars = "6.3.2"
ic-asset-certification = "3.0.3"
ic-http-certification = "3.0.3"
# ic-certified-stable-assets-server = { path = "../ic-certified-stable-assets-server" }
ic-asset-server = { path = "../ic-asset-server" }
hex = "0.4.3"
icrc-ledger-types = "0.1.10"

[build-dependencies]
dotenv = "0.15.0"