[package]
name = "ic-certified-stable-assets-server"
version = "0.2.5"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
edition = "2021"
repository = "https://github.com/dfinity/sdk"
rust-version = "1.75.0"
license = "Apache-2.0"
description = "Rust support for certified stable asset server with no fallback logic."
documentation = "https://docs.rs/ic-certified-stable-assets-server"
categories = ["wasm", "filesystem", "data-structures"]
keywords = ["internet-computer", "dfinity"]

[dependencies]
base64 = "0.22.1"
candid = "0.10.16"
hex = "0.4.3"
ic-cdk = "0.18.5"
ic-certification = "3.0.3"
ic-response-verification = "3.0.3"
ic-representation-independent-hash = "3.0.3"
itertools = "0.14.0"
num-traits = "0.2.19"
serde = "1.0.219"
serde_bytes = "0.11.17"
serde_cbor = "0.11.2"
sha2 = "0.10.8"
percent-encoding = "2.3.1"
ic-stable-structures = "0.7.0"
lazy_static = "1.5.0"

[dev-dependencies]
ic-http-certification = "3.0.3"
candid_parser = "0.2.1"
anyhow = "1.0.98"
ic-response-verification-test-utils = { git = "https://github.com/dfinity/response-verification.git", rev = "a65009624b61736df6d2dc17756bdbd02a84f599" }
ic-certification-testing = { git = "https://github.com/dfinity/response-verification.git", rev = "a65009624b61736df6d2dc17756bdbd02a84f599" }
ic-crypto-tree-hash = { git = "https://github.com/dfinity/ic.git", rev = "1290256484f59c3d950c5e9a098e97383b248ad6" }
